--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.2",
+    "react-laag": "^2.0.3",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.3.2",
     "web-vitals": "^1.0.1",
