--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.2",
     "react-laag": "^2.0.3",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.3.2",
     "web-vitals": "^1.0.1",
