--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@hookform/resolvers": "^2.8.3",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,8 +18,10 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.2",
     "react-laag": "^2.0.3",
+    "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "socket.io-client": "^4.3.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
