--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "socket.io-client": "^4.3.2",
+    "sweetalert2": "^11.3.0",
+    "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
