--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-laag": "^2.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
